# activitywatch

./: .env  .gitmodules  AGENTS.md  HUONG_DAN_SU_DUNG_ACTIVITYWATCH_ODOO_VI.md  KNOWLEDGE.md  Makefile  architecture.md  aw.spec  building-watcher.md  tauri-watchers.mk
.claude/: settings.local.json
.github/workflows/: build-tauri.yml  build-unsigned-dmg.yml  build-watcher-screenshot-mini.yml  build.yml  codeql.yml  diagram.yml  greetings.yml
.omx/plans/: 2026-05-13-tauri-end-user-dashboard-odoo-pin.md
aw-odoo-sync/: Makefile  README.md  aw-odoo-sync.spec  config.toml  config.toml.example  pyproject.toml  state.real.json
aw-odoo-sync/aw_odoo_sync/: __main__.py  config.py  odoo_client.py  sync.py
aw-odoo-sync/tests/: test_sync.py
aw-watcher-screenshot-mini/: Makefile  README.md  aw-watcher-screenshot-mini.spec  config.toml  config.toml.example  pyproject.toml
aw-watcher-screenshot-mini/aw_watcher_screenshot_mini/: __main__.py  capture.py  config.py  main.py  odoo_client.py
aw-watcher-screenshot-mini/visualization/: app.js  index.html
scripts/: build-tauri-win.ps1  mini_screenshot_watcher.py
scripts/package/: activitywatch-setup.iss  build-signed-dmg.sh  build-signed-tauri-dmg.sh  build_app_tauri.sh  entitlements.plist
